[gd_scene load_steps=2 format=3 uid="uid://b5qd7c6h8qwg4"]

[ext_resource type="Script" path="res://ethereal_engine_icon.gd" id="1_vq3p4"]

[node name="EtherealEngineIcon" type="Node2D"]
script = ExtResource("1_vq3p4")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]